Bug 346602 - crash when importing favorites from Yahoo browser [@ nsIEProfileMigrator::GetSourceHomePageURL], patch by Adam Guthrie, r=mconnor